--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scrollbar-hide::-webkit-scrollbar {
+    width: 5px;
+    background-color: #C3DAF9;
+}
+.scrollbar-hide::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #FFAA00;
+    transition: all 0.5ms;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
