Bind with microsoft ad

--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,5 @@
 
 .dx-datagrid-headers {
     background-color: #C3DAF9 !important;
-    color: #5C95C5 !important;
+    color: #286DB5 !important;
 }
