Modify the outlook of the page

--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@
 }
 
 .dx-datagrid-headers {
-    background-color: #eeedec !important;
-    color: #282828 !important;
+    background-color: #489AEE !important;
+    color:#fff !important;
     font-weight: 500 !important;
 }
 
