Change the outlook of the page

--- a/src/assets/P_order.css
+++ b/src/assets/P_order.css
@@ -6,11 +6,16 @@
     color: #006FC9;
 }
 
+.purchaseGrid{
+    height: 350px;
+}
+
 .add-item-btns {
     display: flex;
     gap: 1rem;
     align-items: center;
 }
+
 
 .select-control-input {
     border-style: solid !important;
