Modify the UI of the homepage

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,15 @@
     color:#fff
   }
 
+  
+
   .dx-button-content .dx-dropdowneditor-icon:hover{
+    color:#489AEE
+  }
+
+  .dx-numberbox-spin-button .dx-numberbox-spin-up-icon, .dx-numberbox-spin-button .dx-numberbox-spin-down-icon{
+    color:#489AEE
+  }
+  .dx-numberbox-spin-button .dx-numberbox-spin-up-icon:hover, .dx-numberbox-spin-button .dx-numberbox-spin-down-icon:hover{
     color:#489AEE
   }
