--- a/src/index.css
+++ b/src/index.css
@@ -31,9 +31,10 @@
 }
 
 .dx-form{
-    padding: 16px 20px !important;
+  
+    padding: 10px!important;
 }
-
+/* 
  .dx-texteditor-input-container {
     border: none;
     border: 1px solid #489AEE;
@@ -55,10 +56,14 @@
   }
   .dx-numberbox-spin-button .dx-numberbox-spin-up-icon:hover, .dx-numberbox-spin-button .dx-numberbox-spin-down-icon:hover{
     color:#489AEE
+  } */
+
+
+  .dx-texteditor-container .dx-texteditor-input-container .dx-texteditor-input{
+    height: 10px !important;
+    /* line-height: 14px !important; */
+    padding: 0 30px 0 8px !important;
   }
-
-
-
 
   @media screen and (max-width:767px){
     .dx-field-item{
