--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@
   
     padding: 10px!important;
 }
+
+.form-heading{
+  background: rgb(0,111,201);
+background: linear-gradient(90deg, rgba(0,111,201,1) 0%, rgba(59,150,221,1) 84%, rgba(72,154,238,1) 100%);
+}
 /* 
  .dx-texteditor-input-container {
     border: none;
