--- a/src/assets/P_order.css
+++ b/src/assets/P_order.css
@@ -58,6 +58,7 @@
     outline: none;
 }
 
+
 .control-input {
     border-style: solid !important;
     border-color: #dddddd;
@@ -68,6 +69,12 @@
     height: 28px;  
     padding: .5rem;
 }
+
+.delete-btn {
+    font-size: .72rem;
+    color: #555555;    
+}
+
 
 .control-input:focus {
     border-color: #0176D3;
@@ -90,7 +97,7 @@
 .po-left, .po-right {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: .5rem;
 }
 
 .select-control {
@@ -117,6 +124,11 @@
     font-size: .8rem;
     padding-bottom: 0rem;
         
+}
+
+.po-btns {
+    display: flex;
+    gap: 1rem;
 }
 
 
