--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,14 @@
   background: rgb(0,111,201);
 background: linear-gradient(90deg, rgba(0,111,201,1) 0%, rgba(59,150,221,1) 84%, rgba(72,154,238,1) 100%);
 }
+
+/* .dx-texteditor-input-container .dx-texteditor-input {
+  padding: 2px 12px !important;
+  height: 24px !important;
+  line-height: 20px !important;
+} */
+
+
 /* 
  .dx-texteditor-input-container {
     border: none;
