--- a/src/assets/P_order.css
+++ b/src/assets/P_order.css
@@ -74,8 +74,13 @@
 }
 
 .delete-btn {
-    font-size: .72rem;
-    color: #555555;    
+    font-size: .75rem;
+    font-weight: 600;
+    color: #2e2e2e;    
+}
+
+.delete-btn:hover {
+    color: #0176D3;    
 }
 
 
@@ -94,6 +99,12 @@
     flex-wrap: wrap;
     gap: 1rem;
     width: 100%;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-top-style: solid;
+    border-top-width: 1px;
 
 }
 
@@ -101,6 +112,7 @@
     display: flex;
     flex-direction: column;
     gap: .5rem;
+    width: 30vw;
 }
 
 .select-control {
@@ -116,6 +128,10 @@
 .add-item {
     display: flex;
     gap: 1rem;
+    padding-bottom: .5rem;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    width: 100%
 }
 
 .po-message {
