Prepping data for sending

--- a/src/assets/P_order.css
+++ b/src/assets/P_order.css
@@ -136,6 +136,9 @@
 
 .po-message {
     font-size: .8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .simple-item {
