--- a/src/assets/P_order.css
+++ b/src/assets/P_order.css
@@ -7,7 +7,53 @@
 }
 
 
-
+.po-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  
+  .po-modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+  }
+  
+  .po-modal-header h2 {
+    margin-top: 0;
+  }
+  
+  .po-modal-body {
+    margin-bottom: 10px;
+  }
+  
+  .po-modal-footer {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem
+  }
+  
+  .po-modal-btn {
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #006FC9;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .po-modal-btn:hover {
+    background-color: #006fc9c9;
+  }
+  
 .add-item-btns {
     display: flex;
     gap: 1rem;
