Change the fontsize of the datagrid

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
 /* DataGrid Styling */
 #bookingGrid{
   height: 70vh;
-  font-size: 0.875rem;
+  font-size: 0.7rem !important;;
 }
 
 .dx-datagrid-headers {
