Change the outlook of the page

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --blue: #0088ff;
+  --buttonblue: #0088ff;
+  --darkblue: #1063b3;
+  --grey: #575757;
+  --maroon: #ea0208;
+  --cream: #f9fcfe;
+
+}
+
+
 .scrollbar-hide::-webkit-scrollbar {
     width: 0;
     background-color: #fff;
