--- a/src/components/frontend/products/products.css
+++ b/src/components/frontend/products/products.css
@@ -27,10 +27,12 @@ h1, h4, h5, h6 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    width: 100%;
     overflow: visible;
     align-items: center;
     transition: all 0.5s ease-in-out;
-
+    border-color: red;
+    border-style: solid;
 
     
 }
@@ -39,7 +41,7 @@ h1, h4, h5, h6 {
     display: flex;
     flex-direction: row;
     gap: 4rem;
-    width: auto;
+    width: 1015px;
     padding: 1rem;
    
 }
@@ -52,6 +54,8 @@ h1, h4, h5, h6 {
     overflow: hidden;
     align-items: center;
     width: 1015px;
+    border-color: red;
+    border-style: solid;
     
 }
 
@@ -78,7 +82,7 @@ h1, h4, h5, h6 {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    height: 30vh;
+    height: 300px;
     flex-shrink: 0;
     border-radius: 1rem;
     border-style: solid;
