--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,31 @@
   width: 20vw !important;
 }
 
+/* Context Menu */
+
+.dx-context-menu {
+  background-color: #f2f2f2;
+}
+
+.dx-menu-item-text {
+  font-size: 12px;
+  color: #0176d3;
+  font-weight: 500;
+}
+
+.dx-context-menu-item-content {
+  padding: 8px;
+}
+.dx-menu-item-content > .dx-icon{
+  color: #0176d3;
+  font-weight: 500;
+}
+
+.dx-menu-item-content:hover .dx-menu-item-text {
+  background-color: #f3f3f3;
+}
+
+
 /* DX FOr Styling */
 .dx-form{
   
@@ -80,38 +105,23 @@
 background: linear-gradient(90deg, rgba(0,111,201,1) 0%, rgba(59,150,221,1) 84%, rgba(72,154,238,1) 100%);
 }
 
-/* .dx-texteditor-input-container .dx-texteditor-input {
-  padding: 2px 12px !important;
-  height: 24px !important;
-  line-height: 20px !important;
-} */
+ /* .dx-texteditor-input-container .dx-texteditor-input {
+  display: flex;
+  align-items: center;
+  background-color: red;
+  padding: 0;
+  margin: 0;
+} 
 
 
-/* 
+
  .dx-texteditor-input-container {
+  display: flex;
+  align-items: center;
     border: none;
     border: 1px solid #489AEE;
   }
-  .dx-texteditor-buttons-container{
-    background-color: #489AEE;
-  }
- .dx-button-content .dx-dropdowneditor-icon{
-    color:#fff
-  }
-
-
-  .dx-button-content .dx-dropdowneditor-icon:hover{
-    color:#489AEE
-  }
-
-  .dx-numberbox-spin-button .dx-numberbox-spin-up-icon, .dx-numberbox-spin-button .dx-numberbox-spin-down-icon{
-    color:#fff
-  }
-  .dx-numberbox-spin-button .dx-numberbox-spin-up-icon:hover, .dx-numberbox-spin-button .dx-numberbox-spin-down-icon:hover{
-    color:#489AEE
-  } */
-
-
+   */
  
 
   @media screen and (max-width:767px){
