--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,12 @@ background: linear-gradient(90deg, rgba(0,111,201,1) 0%, rgba(59,150,221,1) 84%,
   }
    */
  
+  @media screen and (min-width:1500px){
+    #orderGrid{
+      height: 45vh;
+    }
+  }
+
 
   @media screen and (max-width:767px){
     .dx-field-item{
