--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,32 @@
   margin: 0;
 }
 
+#summary {
+  padding-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+#submitButton{
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  border-radius: 0%;
+  height: 28px;
+  cursor: pointer;
+  font-size: 12px;
+  gap: 4px;
+  border: none;
+  padding: 0px 16px;
+  width: fit-content;
+  background-color: white;
+  color: #0176d3;
+}
+
+#submitButton:hover{
+  background-color: #e5e7eb;
+}
+
 .notfound-text {
   font-size: 2rem;
 }
