--- a/src/components/frontend/products/products.css
+++ b/src/components/frontend/products/products.css
@@ -24,14 +24,11 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    width: 100%;
     overflow: visible;
     align-items: center;
     transition: all 0.5s ease-in-out;
-    border-color: red;
-    border-style: solid;
-
-    
+    width: 100%;
+  
 }
 
 .carousel-slide {
@@ -40,7 +37,7 @@
     gap: 4rem;
     width: 1015px;
     padding: 1rem;
-   
+
 }
 
 .product-items {
@@ -51,9 +48,6 @@
     overflow: hidden;
     align-items: center;
     width: 1015px;
-    border-color: red;
-    border-style: solid;
-    
 }
 
 
@@ -62,24 +56,24 @@
     margin: 0;
     font-size: 1rem;
     font-weight: 700;
-    
-  
 }
+
 
 .prod-ico-subtitle {
     color: var(--grey);
     font-size: 1rem;
 }
 
+
 .product-item {
-    width: 220px;
+    width: 285px;
     display: flex;
     gap: 1rem;
     padding: 2rem;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    height: 300px;
+    height: 35vh;
     flex-shrink: 0;
     border-radius: 1rem;
     border-style: solid;
@@ -90,7 +84,6 @@
     background-color: rgba(237, 237, 237, 0.364);
 
 }
-
 
 
 .prod-icon {
@@ -137,7 +130,6 @@
     flex-direction: row;
     justify-items: center;
 
-;
 }
 
 .product-item i{
