--- a/src/components/frontend/contactus/contactus.css
+++ b/src/components/frontend/contactus/contactus.css
@@ -6,6 +6,9 @@
 .address-body {
     padding: 0 2rem 0 2rem;
     height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
     text-align: center;
     
 }
@@ -17,12 +20,15 @@
     justify-content: center;
     gap: .7rem;
     color: var(--blue);
-    font-size: .8rem;
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 
 
 .adr-subtext {
     color: rgb(66, 66, 66);
+    font-size: 1rem;
+    font-weight: 450;
 }
 
 
