--- a/src/components/frontend/landing-page/company/company.css
+++ b/src/components/frontend/landing-page/company/company.css
@@ -5,6 +5,7 @@
     gap: 3rem;
     height: max-content;
     align-items: center;
+    margin-top: 2.5rem;
 }
 
 .company-info {
@@ -16,6 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 1rem;
 
 }
 
@@ -26,6 +28,7 @@
 .c-description {
     display: flex;
     gap: 2rem;
+    margin-top: 1rem;
 }
 
 .c-header {
