--- a/src/components/frontend/landing-page/support/supportform.css
+++ b/src/components/frontend/landing-page/support/supportform.css
@@ -1,7 +1,8 @@
+.s-form-parent {
+    display: flex;
+    flex-direction: column;
 
-
-
-
+}
 
 .support-form {
     display: flex;
@@ -14,13 +15,13 @@
     box-shadow: 1.5px 1.5px 1.5px var(--blue);
     background-color: rgba(237, 237, 237, 0.364);
     width: 70vw;
+    height: 600px;
     align-self: center;
     padding: 0 1rem 1rem 1rem;
+    margin-top: 2.5rem;
+
 }
     
-
-
-
 
 .s-form {
     flex: 1;
@@ -48,9 +49,9 @@
 }
 
 .name-control {
-    width: 14vw;
-    height: 3.5vh;
-    border-radius: .5rem;
+    width: 16vw;
+    height: 30px;
+    border-radius: .2rem;
     padding-left: 1rem;
     outline: none;
     border-width: 1px;
@@ -88,8 +89,8 @@
   
 
 .s-form-control {
-    height: 3.5vh;
-    border-radius: .5rem;
+    height: 30px;
+    border-radius: .2rem;
     padding-left: 1rem;
     outline: none;
     border-width: 1px;
@@ -98,8 +99,8 @@
 }
 
 .s-textbox {
-    height: 10vh;
-    border-radius: .5rem;
+    height: 100px;
+    border-radius: .2rem;
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 1rem;
@@ -107,6 +108,7 @@
     border-width: 1px;
     border-color: var(--blue);
     box-shadow: 1.5px 1.5px 1.5px var(--blue);
+    resize: none;
 }
 
 .s-description {
