--- a/src/components/frontend/footer/footer.css
+++ b/src/components/frontend/footer/footer.css
@@ -1,12 +1,11 @@
 .footer {
-    padding-left: 5rem;
-    padding-right: 5rem;
+ 
     display: flex;
     flex-direction: row;
     justify-items: center;
     align-content: center;
     gap: 1rem;
-    height: 60vh;
+    padding: 2rem 5rem;
     margin-top: 2rem;
 }
 
