--- a/src/components/frontend/navbar/navbar.css
+++ b/src/components/frontend/navbar/navbar.css
@@ -1,18 +1,15 @@
 /* Navbar Styling */
 .navbar {
-    margin-top: 1rem;
     padding-left: 3rem;
     padding-right: 3rem;
     z-index: 2;
-    height: 1.5rem;
-   
+    height: 75px;   
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 
 }
-
-
-
-
-
 
 .brand-links {
     display: flex;
@@ -38,11 +35,11 @@
 
 .brand {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
     width: max-content;
+    height: max-content;
 }
 
 
