--- a/src/components/frontend/hero/hero.css
+++ b/src/components/frontend/hero/hero.css
@@ -1,12 +1,8 @@
 /* Lander page */
-
-
-
-
 .hero-content {
   padding-left: 4rem;
   padding-right: 4rem;
-  margin-top: 4rem;
+  padding-top: 4rem;
   height: max-content;
   justify-content: flex-start;
   display: flex;
