--- a/src/components/frontend/navbar/navbar.css
+++ b/src/components/frontend/navbar/navbar.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
 
 }
 
@@ -55,7 +55,24 @@
     transition: all 0.5s;
     cursor: pointer;
     
-    
+     
+}
+
+.nav-signin-button {
+    background-color: var(--blue);
+    border-style: none;
+    color: white;
+    font-weight: 500;
+    font-size: 1rem;
+    border-radius: 4px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    width: 120px;
+    align-items: center;
+    transition: all 0.5s;
+    cursor: pointer;
+
 }
 
 
