--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 :root {
   --blue: #0088ff;
-  --buttonblue: #0088ff;
+  --buttonblue: #006FC9;
   --darkblue: #1063b3;
   --grey: #575757;
   --maroon: #0088ff;
