--- a/src/components/frontend/navbar/navbar.css
+++ b/src/components/frontend/navbar/navbar.css
@@ -1,13 +1,13 @@
 /* Navbar Styling */
 .navbar {
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding-left: 4.5rem;
+    padding-right: 4.5rem;
     z-index: 2;
-    height: 75px;   
+    height: 60px;   
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -47,8 +47,8 @@
     background-color: var(--cream);
     border-style: none;
     color: var(--grey);
-    font-weight: 900;
-    font-size: 1.1rem;
+    font-weight: 600;
+    font-size: 1rem;
     height: max-content;
     width: max-content;
     align-content: center;
@@ -63,16 +63,22 @@
     border-style: none;
     color: white;
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 0.9rem;
     border-radius: 4px;
-    height: 45px;
+    height: 38px;
     display: flex;
     justify-content: center;
-    width: 120px;
+    width: 100px;
     align-items: center;
     transition: all 0.5s;
     cursor: pointer;
 
+}
+
+.nav-signin-button:hover {
+    background-color: var(--bluehover);
+    /* color: var(--blue);
+    border: solid 1px var(--blue); */
 }
 
 
