--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,11 @@
 
 :root {
   --blue: #0088ff;
+  --bluehover : #0267c1;
   --buttonblue: #0088ff;
   --darkblue: #1063b3;
   --grey: #575757;
-  --maroon: #ea0208;
+  --maroon: #0267c1;
   --cream: #f9fcfe;
   --bgColor: #006FC9;
 
