--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --darkblue: #1063b3;
   --grey: #575757;
   --maroon: #0267c1;
+  --black: rgb(0, 0, 0);
   --cream: #f9fcfe;
   --bgColor: #006FC9;
 
