--- a/src/components/frontend/navbar/navbar.css
+++ b/src/components/frontend/navbar/navbar.css
@@ -1,7 +1,7 @@
 /* Navbar Styling */
 .navbar {
-    padding: 35px 3rem;
-    z-index: 2;
+    padding: 30px 3rem;
+    z-index: 6;
     height: 50px;   
     display: flex;
     align-items: center;
@@ -131,7 +131,7 @@ button .nav-button{
 
 /* Mobile styling */
 
-@media screen and (max-width:767px){
+@media screen and (max-width: 430px){
 .brand-logo {
     transform: scale(0.95);
 }
@@ -234,11 +234,10 @@ button .nav-button{
 }
 
 .navbar {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-bottom: 1rem;
+    padding: 30px 3rem;
     height: 1rem;
     justify-items: center;
+    height: 60px;
 
     
 }
