--- a/src/components/frontend/copyright/copyright.css
+++ b/src/components/frontend/copyright/copyright.css
@@ -4,7 +4,7 @@
     font-weight: bold;
     height: 2rem; 
     color: var(--cream);
-    position: sticky;
+    position: fixed;
     bottom: 0;
     z-index: 1;
     display: flex;
@@ -13,12 +13,14 @@
     padding-left: 2rem;
     padding-right: 2rem;
     opacity: 0.95;
+    width: 100%;
 
 }
 
 .copyright-left {
     display: flex;
     gap: 1rem;
+    flex-grow: 1;
 }
 
 
