--- a/src/components/frontend/navbar/navbar.css
+++ b/src/components/frontend/navbar/navbar.css
@@ -1,8 +1,10 @@
 /* Navbar Styling */
 .navbar {
-    padding: 30px 3rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
     z-index: 6;
     height: 50px;   
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -14,6 +16,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 1rem;
+
+}
+
+.brand-nav-links {
+    display: flex;
+    gap: 2rem;
 }
 
 .brandname {
@@ -37,8 +46,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 2rem;
-    width: max-content;
-    height: max-content;
+
 }
 
 
@@ -101,8 +109,7 @@ button .nav-button{
     border-width: 2px;
     border-radius: 25rem;
     height: 7vh;
-    width: 8vw;
-    margin-left: 1rem;
+    width: 50px;
     transition: all 0.3s;
     cursor: pointer;
 }
@@ -126,26 +133,32 @@ button .nav-button{
 
 #burger {
     display: none;
+    color: var(--blue);
 }
 
 
 /* Mobile styling */
 
-@media screen and (max-width: 430px){
+@media screen and (max-width: 576px){
 .brand-logo {
     transform: scale(0.95);
 }
+
+.brand-left, .nav-button, .brand-nav-links {
+    display: none;
+}
+
+
 
 .nav-signin-button {
     background-color: var(--buttonblue);
     border-style: none;
     color: white;
     font-weight: 500;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     border-radius: 4px;
     height: 40px;
     display: flex;
-    margin-right: 1rem;
     justify-content: center;
     width: 100px;
     align-items: center;
@@ -154,16 +167,21 @@ button .nav-button{
 
 }
 
+/* .brand-links {
+    margin-right: 1rem;
+} */
+
 
 .nav-mobile {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     right: 100vw;
     position: absolute;
     background-color: var(--cream);
+    margin-top: 65px;
     display: block;
     z-index: 1;
-    transition: right 0.5s ease-in-out;
+    transition: all 0.1s;
 
 }
 
@@ -173,7 +191,6 @@ button .nav-button{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    margin-top: 5rem;
     width: 100%;
     gap: .8rem;
 
@@ -223,23 +240,20 @@ button .nav-button{
     text-decoration-line: none;
 }
 
-.nav-styled-button {
-    width: max-content;
-    margin-left: -10px;
-    margin-right: 1rem;
-    height: 3rem; 
-    font-size: .9rem;
-    
+
+
+.navbar {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    justify-items: center;
+    height: 60px;
+    width: auto;
+    z-index: 2;
     
 }
 
-.navbar {
-    padding: 30px 3rem;
-    height: 1rem;
-    justify-items: center;
-    height: 60px;
-
-    
+.brand {
+    flex: 0 0;
 }
 
 #burger {
