--- a/src/components/frontend/hero/hero.css
+++ b/src/components/frontend/hero/hero.css
@@ -144,7 +144,8 @@
 
   .hero-content {
     padding-left: .2rem;
-    height: 600px;
+    padding-right: 0;
+    height: 400px;
     transform: scale(0.8);
   }
   
