--- a/src/components/frontend/contactus/contactus.css
+++ b/src/components/frontend/contactus/contactus.css
@@ -27,11 +27,21 @@
 }
 
 
+.support-information {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
 
+.support-info-header .support-info-header-title {
+    font-size: 2rem;
+    color: var(--blue);
+    font-weight: 600;
+}
 
-
-
-@media screen and (max-width:767px) {
-
-
+.support-info-header .support-info-header-subtitle {
+    font-size: 1.5rem;
+    color: var(--bluehover);
 }
