--- a/src/components/frontend/landing-page/support/supportform.css
+++ b/src/components/frontend/landing-page/support/supportform.css
@@ -9,9 +9,10 @@
     gap: 1.5rem;
     align-items: center;
     border-radius: 1rem;
-    border-style: solid;
+    /* border-style: solid;
     border-width: 1px;
-    border-color: var(--blue);
+    border-color: var(--blue); */
+    box-shadow: 0px 5px 20px -10px rgba(0, 0, 0, 1);
     background-color: rgba(237, 237, 237, 0.364);
     width: 70vw;
     height: 600px;
@@ -71,11 +72,11 @@
     background-color: var(--blue);
     color: var(--cream);
     border-style: none;
-    border-radius: 25rem;
+    border-radius: 10px;
     height: 7vh;
-    width: 95%;
+    width: 75%;
     align-self: center;
-    transition: all 0.5s;
+    transition: all 0.3s;
     font-size: 1rem;
     font-weight: 500;
     letter-spacing: .02rem;
@@ -84,9 +85,13 @@
 }
 
 .s-button:hover {
-    background-color: #3683d058;
-    color: var(--blue);
+    background-color: var(--bluehover);
+
 }
+
+.s-button:active {
+    background-color: var(--blue);
+} 
   
 
 .s-form-control {
