--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,23 @@
   color: #0176d3;
 }
 
+#onBoardingButton {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  border-radius: 2px;
+  border: none;
+  height: 28px;
+  cursor: pointer;
+  font-size: 12px;
+  gap: 4px;
+  border: none;
+  padding: 8px 16px;
+  width: fit-content;
+  color: white;
+  background-color: #0176d3;
+}
+
 #submitButton:hover{
   background-color: #e5e7eb;
 }
