--- a/src/components/frontend/testimonial/testimonial.css
+++ b/src/components/frontend/testimonial/testimonial.css
@@ -19,6 +19,7 @@
     color: var(--cream);
     border-style: none;
     position: absolute;
+    cursor: pointer;
     font-size: 1.2rem;
     transition: all 0.3s;
     opacity: 0.8;
