--- a/src/components/frontend/landing-page/support/supportform.css
+++ b/src/components/frontend/landing-page/support/supportform.css
@@ -13,9 +13,8 @@
     border-width: 1px;
     border-color: var(--blue); */
     box-shadow: 0px 5px 20px -10px rgba(0, 0, 0, 1);
-    background-color: rgba(237, 237, 237, 0.364);
-    width: 70vw;
-    height: 600px;
+    width: 1340px;
+    height: 700px;
     align-self: center;
     padding: 0 1rem 1rem 1rem;
     margin-top: 2.5rem;
@@ -51,7 +50,7 @@
 }
 
 .name-control {
-    width: 16vw;
+    width: 307px;
     height: 30px;
     border-radius: .2rem;
     padding-left: 1rem;
@@ -73,7 +72,7 @@
     color: var(--cream);
     border-style: none;
     border-radius: 10px;
-    height: 7vh;
+    height: 60px;
     width: 75%;
     align-self: center;
     transition: all 0.3s;
@@ -96,6 +95,7 @@
 
 .s-form-control {
     height: 30px;
+    width: 640px;
     border-radius: .2rem;
     padding-left: 1rem;
     outline: none;
@@ -105,6 +105,7 @@
 
 .s-textbox {
     height: 100px;
+    width: 640px;
     border-radius: .2rem;
     padding-left: 1rem;
     padding-right: 1rem;
