--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,38 @@
   --black: rgb(0, 0, 0);
   --cream: #f9fcfe;
   --bgColor: #006FC9;
+  --dashboardGridBlue: #5C95C5;
+  --dashboardSecondaryBlue: #489AEE;
 
 }
+
+/* #mainsidenav::-webkit-scrollbar-thumb {
+  background-color: #489bee38;
+  border-radius: 5px;
+  
+}
+
+#mainsidenav::-webkit-scrollbar {
+  background-color: #FFFFFF !important;
+  width: 7px;
+}
+
+
+#mainsidenav::-webkit-scrollbar-thumb:hover {
+  background-color: #489bee;
+}
+
+#mainsidenav::-webkit-scrollbar-button {
+  background-color: #3675b4;
+  color: red;
+  height: 1px;
+
+}
+
+
+#mainsidenav::-webkit-scrollbar:horizontal {
+  display: none;
+} */
 
 .notfound-header {
   font-size: 5rem;
@@ -128,21 +158,43 @@
   background-color: #f2f2f2;
 }
 
+.pk-hyperlink {
+  color: var(--dashboardSecondaryBlue);
+}
+
+.pk-hyperlink:hover {
+  text-decoration-line: underline;
+}
+
+.grid-context-btn {
+  /* color: var(--dashboardSecondaryBlue); */
+  font-size: .8rem;
+  font-weight: 500;
+}
+
+.grid-context-btn:hover {
+  color: var(--dashboardSecondaryBlue);
+}
+
 .dx-menu-item-text {
   font-size: 12px;
-  color: #0176d3;
+  color: var(--dashboardGridBlue);
   font-weight: 500;
+}
+
+.dx-menu-item-popout {
+  color: var(--dashboardGridBlue)
 }
 
 .dx-context-menu-item-content {
   padding: 8px;
 }
 .dx-menu-item-content > .dx-icon{
-  color: #0176d3;
+  color: var(--dashboardGridBlue);
   font-weight: 500;
 }
 
-.dx-menu-item-content:hover .dx-menu-item-text {
+.dx-menu-item-content:hover {
   background-color: #f3f3f3;
 }
 
