--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,19 @@
   color: #0176d3;
 }
 
+#devBlueButton{
+  border-radius: 2%;
+  height: 28px;
+  border: none;
+  padding: 0px 16px;
+  width: fit-content;
+  background-color: #0176d3;
+  color: #fff;
+}
+#devBlueButton:hover{
+  background-color: #1B6EC2;
+}
+
 #onBoardingButton {
   display: flex;
   align-items: center;
@@ -205,7 +218,7 @@
     padding: 10px!important;
 }
 
-.form-heading{
+.linear-bg{
   background: rgb(0,111,201);
 background: linear-gradient(90deg, rgba(0,111,201,1) 0%, rgba(59,150,221,1) 84%, rgba(72,154,238,1) 100%);
 }
