Testing out modal-like details page

--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,10 @@
   width: 20vw !important;
 }
 
+.blue-icon {
+  color: #0088ff; 
+}
+
 .pk-div {
   cursor: pointer;
   color: var(--dashboardSecondaryBlue);
