--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ body{
   font-size: 5rem;
   margin: 0;
 }
+.active-link {
+  font-weight: bold;
+  background-color: blue;
+  /* Add any other styles you want to apply to the active link */
+}
 
 #summary {
   padding-left: 10px;
@@ -156,13 +161,13 @@ body{
 }
 .dx-datagrid-headers {
     color: #000 !important;
-   
-   font-size: 0.75rem !important;
+    background-color: #c5c5c534;
+    font-size: 0.75rem !important;
     font-weight: 600 !important;
   
 }
 
-.dx-row-focused td a div span {
+.dx-row-focused td button div span {
   color: var(--cream) !important;
 }
 
@@ -170,6 +175,22 @@ body{
 .dx-overlay-content .dx-popup-normal {
   height: 20vh !important;
   width: 20vw !important;
+}
+
+.dx-row:hover {
+  cursor: pointer;
+}
+
+.dx-row td:hover {
+  background-color: rgba(193, 193, 193, 0.366) !important;
+}
+
+.dx-row-focused td:hover {
+  background-color: #5c96c5c7 !important;
+}
+
+.dx-freespace-row td:hover {
+  background-color: inherit !important;
 }
 
 .pk-div {
@@ -270,3 +291,8 @@ background: radial-gradient(circle, rgba(72,154,238,1) 0%, rgba(255,255,255,1) 1
     }
    
 }
+
+.profile-edit {
+  display: none;
+}
+
